crash in meta_logical_monitor_get_layout
With mutter 3.28.2, here is how it happened :
- laptop was suspended with no external monitor plugged in
- an external monitor is plugged in
- laptop is unsuspended
Core was generated by `/usr/bin/gnome-shell'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0 meta_logical_monitor_get_layout (logical_monitor=0x0) at backends/meta-logical-monitor.c:198
198 backends/meta-logical-monitor.c: No such file or directory.
[Current thread is 1 (Thread 0x7f97e78bfac0 (LWP 2315))]
(gdb) bt
#0 0x00007f97e4f00320 in meta_logical_monitor_get_layout (logical_monitor=0x0) at backends/meta-logical-monitor.c:198
#1 0x00007f97e4f86ac4 in send_xdg_output_events (resource=0x56053c45aa30, wayland_output=<optimized out>, logical_monitor=0x0, need_all_events=1, pending_done_event=0x0) at wayland/meta-wayland-outputs.c:527
#2 0x00007f97e0d11fce in ffi_call_unix64 () at /usr/lib/x86_64-linux-gnu/libffi.so.6
#3 0x00007f97e0d1193f in ffi_call () at /usr/lib/x86_64-linux-gnu/libffi.so.6
#4 0x00007f97db7d4d04 in () at /usr/lib/x86_64-linux-gnu/libwayland-server.so.0
#5 0x00007f97db7d133f in () at /usr/lib/x86_64-linux-gnu/libwayland-server.so.0
#6 0x00007f97db7d2d72 in wl_event_loop_dispatch () at /usr/lib/x86_64-linux-gnu/libwayland-server.so.0
#7 0x00007f97e4f6d307 in wayland_event_source_dispatch (base=<optimized out>, callback=<optimized out>, data=<optimized out>) at wayland/meta-wayland.c:86
#8 0x00007f97e6a18287 in g_main_context_dispatch () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#9 0x00007f97e6a184c0 in () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007f97e6a187d2 in g_main_loop_run () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007f97e4f3f06c in meta_run () at core/main.c:664
#12 0x000056052ea7d41c in main (argc=<optimized out>, argv=<optimized out>) at ../src/main.c:525
Edited by Lionel Landwerlin