wayland: Do not send xdg-output without a logical monitor

If a client asks for xdg-output before we have set the output's
logical monitor, we would end up crashing with a NULL pointer
dereference.

Check for output->logical_monitor before trying to send the xdg-output
events.

Closes: https://gitlab.gnome.org/GNOME/mutter/issues/194